@@ -11,6 +11,12 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-16
+2015-12-18 TJ Lane
+- Added IpimbDetector
+- Added explicit list of BldInfo detector types
+- modified DdlDetector to have .get() instead of __call__()
+
 Tag: V00-03-15
 2015-12-18 Mikhail S. Dubrovin
 - PyDetectorAccess.py - add local caching for coords_x,y,z, areas, self.mask_geo, self.pixel_size (PSAS-139)
